# Fuzzy

./: .gitignore  README.md  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
fuzzy/: __init__.py  __main__.py  db.py
fuzzy/plugins/: system.py  user.py  xp.py
